<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home_folder">

    <fragment
        android:id="@+id/navigation_home_folder"
        android:name="com.telcco.klipmunk.CollectionFragment"
        android:label="@string/title_home"
        tools:layout="@layout/activity_collection"
        >
        <argument android:name="userId"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_home_clip"
        android:name="com.telcco.klipmunk.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_home_search"
        android:name="com.telcco.klipmunk.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_home_notify"
        android:name="com.telcco.klipmunk.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_home_profile"
        android:name="com.telcco.klipmunk.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>