<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>
        <variable
            name="LoginViewModel"
            type="com.telcco.klipmunk.LogInViewModel" >
        </variable>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/snack_login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.telcco.klipmunk.LogIn"
        android:id="@+id/login_cons">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="140dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_dark" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="K  L  I  P  M  U  N  K"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/admin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/edi_text_box"
            android:ems="12"
            android:hint="Email"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/admin"
            android:text="@={LoginViewModel.emailAdd}"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/edi_text_box"
            android:ems="12"
            android:hint="Password"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            android:text="@={LoginViewModel.passwordAdd}"
            android:password="true"/>

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/edi_text_box"
            android:text="SignIN"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password"
            android:onClick="@{(v)-> LoginViewModel.onClick(v)}"/>

        <TextView
            android:id="@+id/admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/tagLine"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tv_forgotpass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ForgotPassword ?"
            android:textColor="#000"
            app:layout_constraintBottom_toTopOf="@+id/not_member"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/not_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="36dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/not_member"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <TextView
            android:id="@+id/signUp_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/not_member"
            android:onClick="@{(v)-> LoginViewModel.onSignUp(v)}"/>




    </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:visibility="@{LoginViewModel.busy}"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_above="@+id/curve_img"
            android:text="Tell me i forget,Teach me and i remember\n involve me and i learn "
           />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
            android:src="@drawable/ic_group2"
            android:id="@+id/curve_img"/>

    </RelativeLayout>

</layout>
